# AgentDock

./: .gitignore  01-核心实现方案-v1.1-Codex.md  02-桌面端UI实现方案-v1.1-Claude.md  03-接口契约与验收清单-v1.1.md  04-Provider协议-v1.0.md  05-桌面端前端体验优化与功能补全清单-v1.0-Claude.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop/: README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.sh
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: daemon_client.rs  error.rs  event_bridge.rs  governance_commands.rs  main.rs  management_commands.rs  provider_setup.rs  repair_commands.rs  view_types.rs
apps/desktop/src/components/: AgentMark.tsx  ApprovalBar.tsx  BudgetResumeDialog.tsx  CopyText.tsx  Dialog.tsx  DiffPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  FullAccessBanner.tsx  IssueCard.tsx  MonacoDiff.tsx  PathField.tsx  PlanApprovalBar.tsx  ProviderCatalog.tsx  ProviderIcon.tsx  RunLogViewer.tsx  Sidebar.tsx  Skeleton.tsx  StateBadge.tsx  Timeline.tsx  Toaster.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  switch.tsx  tooltip.tsx
apps/desktop/src/copy/: agents.ts  blocked.ts  errors.ts  status.ts
apps/desktop/src/hooks/: useEnv.ts  useGlobalEvents.ts  useGovernance.ts  useProjects.ts  useProviders.ts  useRunLog.ts  useRunLogStream.ts  useSettings.ts  useStorage.ts  useTaskData.ts  useTasks.ts
apps/desktop/src/lib/: commands.ts  diff.ts  format.ts  monaco.ts  queryClient.ts  queryKeys.ts  tauriDevShim.ts  tauriEvents.ts  utils.ts
apps/desktop/src/routes/: AppLayout.tsx  IndexRedirect.tsx  NewTaskDialog.tsx  Onboarding.tsx  Settings.tsx  TaskDetail.tsx  TaskList.tsx
apps/desktop/src/routes/detail/: DiffTab.tsx  GovernanceTab.tsx  LogsTab.tsx  OverviewTab.tsx  ReviewTab.tsx
apps/desktop/src/routes/settings/: ApiRuntimeSettings.tsx  EnvSection.tsx  ExecutionNodeSection.tsx  ProjectConfigTrustPanel.tsx  ProjectSection.tsx  ProviderSection.tsx  StorageSection.tsx
apps/desktop/src/stores/: logStore.ts  toastStore.ts  uiStore.ts
apps/desktop/src/styles/: theme.css
crates/agent-adapters/: Cargo.toml
crates/agent-adapters/src/: api_provider.rs  cli_providers.rs  credentials.rs  dynamic.rs  lib.rs  support.rs  tests.rs
crates/agent-adapters/src/api_provider/: api_telemetry_tests.rs  support.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: governance.rs  lib.rs  operations.rs  providers.rs  schemas.rs  settings.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: governance_requests.rs  lib.rs  main.rs  scheduler.rs  tests.rs
crates/git-engine/: Cargo.toml
crates/git-engine/src/: compatibility.rs  lib.rs  operations.rs  tests.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: adoption.rs  agent_run.rs  approval_seal.rs  config_trust.rs  config_trust_tests.rs  data_protection.rs  delivery.rs  development.rs  execution_nodes.rs  failure_tests.rs  git_compat_tests.rs  governance.rs  governance_tests.rs  history.rs  integrity.rs  lib.rs  lifecycle.rs  plan_seal.rs  planning.rs  privacy_tests.rs  quality_replay.rs  repair.rs  repair_tests.rs  reproducibility.rs  result_repair.rs  review.rs  review_council.rs  review_council_tests.rs  review_issue_tests.rs  saga.rs  scheduler_limits.rs  settings_tests.rs  storage.rs  support.rs  task_creation.rs  task_queries.rs  task_start.rs  telemetry.rs  test_support.rs  tests.rs
crates/orchestrator/src/governance_tests/: execution_quality_tests.rs
crates/orchestrator/templates/: input.md  review-input.md
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_initial.sql  0002_daemon_queue.sql  0003_storage_lifecycle.sql  0004_privacy_and_issue_lifecycle.sql  0005_resilience_and_council.sql  0006_execution_governance.sql  0007_project_config_trust.sql  0008_plan_seal.sql  0009_task_sagas.sql  0010_delivery_head_checks.sql  0011_hard_budgets.sql  0012_live_run_adoption.sql  0013_scheduler_governance.sql  0014_repository_identity.sql
crates/persistence/src/: lib.rs  protection.rs  tests.rs
crates/process-supervisor/: Cargo.toml
crates/process-supervisor/src/: lease.rs  lib.rs  tests.rs
crates/provider-protocol/: Cargo.toml
crates/provider-protocol/src/: client.rs  lib.rs  manifest.rs  registry.rs  types.rs
crates/provider-protocol/tests/: conformance.rs
crates/release-engine/: Cargo.toml
crates/release-engine/src/: lib.rs  tests.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
fixtures/sample-repo/: package.json
fixtures/sample-repo/.agentflow/: project.toml
fixtures/sample-repo/.agentflow/rules/: coding.md
fixtures/sample-repo/src/: math.test.ts
