[package]
name = "agentflow-cli"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-contracts.workspace = true
agentflow-daemon.workspace = true
agentflow-orchestrator.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
