[package]
name = "agentflow-git-engine"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-contracts.workspace = true
globset.workspace = true
regex.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
