[package]
name = "agentflow-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-agent-adapters.workspace = true
agentflow-contracts.workspace = true
agentflow-git-engine.workspace = true
agentflow-persistence.workspace = true
agentflow-provider-protocol.workspace = true
agentflow-process-supervisor.workspace = true
agentflow-workflow.workspace = true
anyhow.workspace = true
chrono.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
tempfile.workspace = true

[lints]
workspace = true
