[package]
name = "agentflow-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-contracts.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
