[package]
name = "agentflow-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-contracts.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
