[package]
name = "agentflow-process-supervisor"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-contracts.workspace = true
chrono.workspace = true
libc.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
