[package]
name = "agentflow-provider-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
agentflow-contracts.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
