[package]
name = "agentflow-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agentflow-contracts = { path = "../../../crates/contracts" }
agentflow-daemon = { path = "../../../crates/daemon" }
agentflow-orchestrator = { path = "../../../crates/orchestrator" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "chrono", "serde_json"] }
specta-typescript = "0.0.12"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
tokio = { version = "1", features = ["full"] }
which = "8"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
